@@ -29,6 +29,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<br>
 				az sonra elinize ulaşacak e-posta adresindeki şifreyi kullanarak raptiye hesabınıza tekrar ulaşabileceksiniz. ilk girişinizden sonra lütfen şifrenizi profil ayarlarından değiştirin.
 			</div>
+			{% else %}
+			<div class="forgotton_password_description">
+				hesabınızla ilişkili e-posta adresinizi aşağıdaki kutuya yazarak yeni şifrenizin e-posta adresinize gönderilmesini sağlayabilirsiniz.
+			</div>
 			{% endif %}
 			<div class="form">
 				<form id="forgotten_password_form" name="forgotten_password" method="post" accept-charset="utf-8">
